@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.140 2006/04/06 03:43:47 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.141 2006/04/08 06:28:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -1974,14 +1974,14 @@ test_term()
     (*t->arrow) (x, y, x - xl, y, END_HEAD);
     curr_arrow_headfilled = 2;
     (*t->arrow) (x, y, x, y + yl, END_HEAD);
-    curr_arrow_headfilled = 3;
+    curr_arrow_headfilled = 1;		/* Was 3, but no terminals implement it */
     (*t->arrow) (x, y, x, y - yl, END_HEAD);
     curr_arrow_headfilled = i;
     xl = t->h_tic * 5;
     yl = t->v_tic * 5;
     (*t->arrow) (x - xl, y - yl, x + xl, y + yl, END_HEAD | BACKHEAD);
     (*t->arrow) (x - xl, y + yl, x, y, NOHEAD);
-    curr_arrow_headfilled = 3;
+    curr_arrow_headfilled = 1;		/* Was 3, but no terminals implement it */
     (*t->arrow) (x, y, x + xl, y - yl, BACKHEAD);
 
     /* test line widths */
